--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/message/_message_form.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/message/_message_form.scss
@@ -275,6 +275,7 @@
 		background-color: transparent;
 		visibility: hidden;
 		opacity: 0.6;
+		z-index: 1;
 
 		&.active {
 			visibility: visible;
